--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
                             <outputDirectory>${project.build.directory}/classes/public/</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>src/main/webapp/build/</directory>
+                                    <directory>src/main/webapp/</directory>
                                     <filtering>true</filtering>
                                 </resource>
                             </resources>
