Club registration Response with id

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
+        <!-- Dev tools -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- JPA -->
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
