--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,13 @@ spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
+
+####### SSL #######
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+#server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+#server.ssl.key-store=classpath:tk21.p12
+# The password used to generate the certificate
+#server.ssl.key-store-password=Bachelor2020
+# The alias mapped to the certificate
+#server.ssl.key-alias=tk21
