File Storage test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
 
+####### FILE STORAGE #######
+storage.imagesPath = ${IMAGES_PATH:../../FileStorage/TK21/Images}
+
 ####### SSL #######
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 #server.ssl.key-store-type=PKCS12
