--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>2.2.4.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-mock -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-mock</artifactId>
+            <version>2.0.8</version>
+        </dependency>
+
+
 
         <!-- Dev tools -->
         <dependency>
