--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,10 @@ spring.mail.properties.mail.smtp.writetimeout = 5000
 ####### FILE STORAGE #######
 storage.imagesPath = ${IMAGES_PATH:../../FileStorage/TK21/Images}
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=25MB
+
 ####### SSL #######
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 #server.ssl.key-store-type=PKCS12
