Upgrade to Postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name="TK21"
 app.name = "TK21"
 
 ####### Data-Source Properties #######
-spring.datasource.url=${database.url:jdbc:h2:mem:tk21;}
+database.url=${DATABASE_URL:jdbc:h2:mem:tk21;}
 database.ddlgeneration=create-tables
 
 ####### JWT #######
