Upgrade to Postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name="TK21"
 app.name = "TK21"
 
 ####### Data-Source Properties #######
-database.url=${DATABASE_URL:jdbc:h2:mem:tk21;}
+database.url=${DATABASE_URL:jdbc:h2:mem:tk21}
+database.driverClassName=org.postgresql.Driver
 database.ddlgeneration=drop-and-create-tables
 
 ####### JWT #######
