--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,15 @@
             <version>2.3.1</version>
         </dependency>
 
+        <!-- Web Scraping -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.12.1</version>
+        </dependency>
+
+
+
         <!-- ********************************************************************************** -->
 
         <!-- TEST Dependencies -->
