--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,9 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=25MB
 
+####### LOGGING #######
+logging_path = ${MY_LOG_PATH:./logs}
+
 ####### SSL #######
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 #server.ssl.key-store-type=PKCS12
