--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <version>2.2.4.RELEASE</version>
         </dependency>
 
+        <!-- Apache Tika -->
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>1.18</version>
+        </dependency>
 
         <!-- Dev tools -->
         <dependency>
