--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,9 @@ spring.servlet.multipart.max-request-size=25MB
 ####### LOGGING #######
 logging_path=${MY_LOG_PATH:./logs}
 
+####### TINYPNG #######
+tinify.key=WGJVZFrqLdl8bDmyjZH1brzMSJlNNDX7
+
 ####### SSL #######
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 #server.ssl.key-store-type=PKCS12
