Bug fix and email template update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=${PORT:18080}
-spring.application.name="TK21"
-app.name="TK21"
+spring.application.name=TK21
+
+####### Application Properties #######
+app.name=TK21
+app.url=http://195.181.209.16
 
 ####### Data-Source Properties #######
 database.url=${DATABASE_URL:jdbc:h2:mem:tk21}
