--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
             <version>1.18</version>
         </dependency>
 
+        <!-- Apache Commons -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
+
         <!-- Tinify API -->
         <dependency>
             <groupId>com.tinify</groupId>
