--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=TK21
 
 ####### Application Properties #######
 app.name=TK21
-app.url=http://195.181.209.16
+app.url=https://tk21.cz
 
 ####### Data-Source Properties #######
 database.url=${DATABASE_URL:jdbc:h2:mem:tk21}
@@ -40,13 +40,3 @@ logging_path=${MY_LOG_PATH:./logs}
 
 ####### TINYPNG #######
 tinify.key=WGJVZFrqLdl8bDmyjZH1brzMSJlNNDX7
-
-####### SSL #######
-# The format used for the keystore. It could be set to JKS in case it is a JKS file
-#server.ssl.key-store-type=PKCS12
-# The path to the keystore containing the certificate
-#server.ssl.key-store=classpath:tk21.p12
-# The password used to generate the certificate
-#server.ssl.key-store-password=Bachelor2020
-# The alias mapped to the certificate
-#server.ssl.key-alias=tk21
