--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ backend.allowCors=True
 spring.mail.host=smtp.forpsi.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.username=noreply@tk21.cz
+spring.mail.username=info@tk21.cz
 spring.mail.password=Bachelor2020
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
